# weather_agent

./: README.md  pyproject.toml
mcpserver/: server.py
server/: client.py  weather.json  weather.py
