[project]
name = "mcp-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.11.3",
    "httpx>=0.28.1",
    "langchain-groq>=0.3.7",
    "mcp-use==1.3.9",
    "mcp[cli]>=1.13.0",
    "python-dotenv>=1.1.1",
]
